--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <head>
-  Skills
-
+  <meta charset="utf-8">
+  <title>Dominik's Personal Site</title>
 </head>
+  
 <hr>
 
-<body>
+<body style="background-color:blue;">
   <h3>Skills</h3>
   <table cellspacing="10">
     <tbody>
